@@ -1,4 +1,5 @@
 2012-10-04 Tsi YANG <tsi@in-cite.net>
+	* Feature: Implemented datastore categories.
 	* Feature: Implemented renderFilegroupExtraFields hook.
 
 2012-06-21 Aurelien GRAYO <aurelien@in-cite.net>
